@@ -4,6 +4,8 @@ DuroDBMS 1.2
 
 - Added a limited form of subtyping. Only dummy types can be supertypes.
 
+- Added operator versions.
+
 - Added checking for integer overflow. An integer overflow results in a
   type_constraint_violation_error being raised.
 
